# btrack-gui

./: CMakeLists.txt  LICENSE  btrack-gui.cpp  btrack-gui.h
binding/: NodeGraphModel.cpp  NodeGraphModel.h  binding.h  utils.h
examples/: CMakeLists.txt  base_gui.cpp
tests/: CMakeLists.txt  gui_tests.cpp
